# AceHUB

./: .gitignore  2Full_video_PE_histogram.py  3Full_Video_Normalization.py  4Create_Frame_Labels.py  4Stroke_detection.py  Check_clips.py  Dependencies_test.py  Yolov8Test_Video.py  Yolov8Test_image.py  folder_structure.py  newstru.py  requirements.txt
acehub-old/: README.md
tennis-stroke-detection/: .env.example  .gitignore  Makefile  README.md  Requirements Prod.txt  check_clips.py  create_stroke_skeleton.py  enhanced_tennis_processor.py  find_and_migrate_videos.py  lkxc.py  one-click.py  process_video_skeleton.py  pyproject.toml  realtime_pose.py  reorganize_library.py  reorganize_videos.py  requirements-prod.txt  requirements.txt  setup.py  visualize_stroke_csv.py
tennis-stroke-detection/Old Scripts/: Full video pe histogram.py  anotherhistogram.py  creaetclipsskeleton.py  create_clip_skeletons.py  kdsff.py  linbrary_time_normalization.py  normalization old.py  sequence_preparator.py  show_skeleton.py
tennis-stroke-detection/Strokes_Library/stroke_1/: source_info.txt
tennis-stroke-detection/Strokes_Library/stroke_10/: source_info.txt
tennis-stroke-detection/Strokes_Library/stroke_100/: source_info.txt
tennis-stroke-detection/Strokes_Library/stroke_1002/: source_info.txt
tennis-stroke-detection/Strokes_Library/stroke_1003/: source_info.txt
tennis-stroke-detection/Strokes_Library/stroke_1007/: source_info.txt
tennis-stroke-detection/Strokes_Library/stroke_1009/: source_info.txt
tennis-stroke-detection/Strokes_Library/stroke_101/: source_info.txt
tennis-stroke-detection/Strokes_Library/stroke_1010/: source_info.txt
tennis-stroke-detection/Strokes_Library/stroke_1012/: source_info.txt
tennis-stroke-detection/Strokes_Library/stroke_1013/: source_info.txt
tennis-stroke-detection/Strokes_Library/stroke_1014/: source_info.txt
tennis-stroke-detection/Strokes_Library/stroke_1015/: source_info.txt
tennis-stroke-detection/Strokes_Library/stroke_1016/: source_info.txt
tennis-stroke-detection/Strokes_Library/stroke_1017/: source_info.txt
tennis-stroke-detection/Strokes_Library/stroke_1018/: source_info.txt
tennis-stroke-detection/Strokes_Library/stroke_102/: source_info.txt
tennis-stroke-detection/Strokes_Library/stroke_1022/: source_info.txt
tennis-stroke-detection/Strokes_Library/stroke_1024/: source_info.txt
tennis-stroke-detection/Strokes_Library/stroke_1027/: source_info.txt
tennis-stroke-detection/Strokes_Library/stroke_1028/: source_info.txt
tennis-stroke-detection/Strokes_Library/stroke_1029/: source_info.txt
tennis-stroke-detection/Strokes_Library/stroke_103/: source_info.txt
tennis-stroke-detection/Strokes_Library/stroke_1030/: source_info.txt
tennis-stroke-detection/Strokes_Library/stroke_1031/: source_info.txt
tennis-stroke-detection/Strokes_Library/stroke_1032/: source_info.txt
tennis-stroke-detection/Strokes_Library/stroke_1034/: source_info.txt
tennis-stroke-detection/Strokes_Library/stroke_1035/: source_info.txt
tennis-stroke-detection/Strokes_Library/stroke_1036/: source_info.txt
tennis-stroke-detection/Strokes_Library/stroke_1037/: source_info.txt
tennis-stroke-detection/Strokes_Library/stroke_1038/: source_info.txt
tennis-stroke-detection/Strokes_Library/stroke_1039/: source_info.txt
tennis-stroke-detection/Strokes_Library/stroke_104/: source_info.txt
tennis-stroke-detection/Strokes_Library/stroke_1040/: source_info.txt
tennis-stroke-detection/Strokes_Library/stroke_1041/: source_info.txt
tennis-stroke-detection/Strokes_Library/stroke_1042/: source_info.txt
tennis-stroke-detection/Strokes_Library/stroke_1043/: source_info.txt
tennis-stroke-detection/Strokes_Library/stroke_1046/: source_info.txt
tennis-stroke-detection/Strokes_Library/stroke_1048/: source_info.txt
tennis-stroke-detection/Strokes_Library/stroke_1049/: source_info.txt
tennis-stroke-detection/Strokes_Library/stroke_105/: source_info.txt
tennis-stroke-detection/Strokes_Library/stroke_1050/: source_info.txt
tennis-stroke-detection/Strokes_Library/stroke_1051/: source_info.txt
tennis-stroke-detection/Strokes_Library/stroke_1052/: source_info.txt
tennis-stroke-detection/Strokes_Library/stroke_1053/: source_info.txt
tennis-stroke-detection/Strokes_Library/stroke_1054/: source_info.txt
tennis-stroke-detection/Strokes_Library/stroke_1055/: source_info.txt
tennis-stroke-detection/Thesis/: Results.txt  animate_pose.py  build_knn_split.py  cut_video_by_llc.py  eval_knn_auto.py  evaluate_knn_basic.py  export_neighbours.py  extract_csv.py  slice_csv_by_llc.py  time_normalise_clips.py  vectorise_clip.py
tennis-stroke-detection/abilities/: data_validator.py  manual_labeling_ability.py
tennis-stroke-detection/config/: data_config.yaml  model_config.yaml  pipeline_config.yaml  segmentation_config.yaml  stroke_segmentation_config.yaml  video_config.yaml  video_processing_config.yaml
tennis-stroke-detection/docs/: data_pipeline.md  model_architecture.md
tennis-stroke-detection/src/: README_TENNIS_PROCESSOR.md  merged_tennis_processor.py  stroke_segmentation.py  tennis_video_processor.py  video_processing.py  visualize_pose.py
tennis-stroke-detection/unprocessed_videos/: README.md
tennis-stroke-detection/web-labeler/: index.html  main.js  style.css
(+1192 files in other folders)
