[build-system]
requires = [
    "setuptools>=42",
    "wheel"
]
build-backend = "setuptools.build_meta"

[project]
name = "tennis-stroke-detection"
version = "0.1.0"
description = "AI-powered tennis stroke detection and analysis."
readme = "README.md"
requires-python = ">=3.7"
license = { file = "LICENSE" }
authors = [
    { name = "Noah", email = "noahcladera@gmail.com" }
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent"
]
dependencies = [
    "numpy>=1.18.0",
    "scipy>=1.5.0",
    "mediapipe>=0.8.10",
    "opencv-python>=4.5.0",
    "ffmpeg-python>=0.2.0",
    "yt-dlp>=2021.12.1",
    "dtaidistance>=2.0.5",
    "pyyaml>=6.0"
]

[project.urls]
Homepage = "https://github.com/noahcladera/tennis-stroke-detection"
Repository = "https://github.com/noahcladera/tennis-stroke-detection"

[tool.setuptools.packages.find]
where = ["."]