[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tennis-stroke-detection"
version = "0.1.0"
description = "An AI-powered pipeline for detecting and analyzing tennis strokes from video."
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }
authors = [
  { name = "Noah Cladera", email = "noahcladera@gmail.com" }
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "Intended Audience :: Science/Research",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "License :: OSI Approved :: MIT License",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
  "Topic :: Scientific/Engineering :: Image Recognition",
  "Operating System :: OS Independent"
]
dependencies = [
  "numpy>=1.22.0",
  "scipy>=1.8.0",
  "pandas>=1.4.0",
  "matplotlib>=3.5.0",
  "mediapipe>=0.9.0",
  "opencv-python>=4.6.0",
  "tensorflow>=2.9.0",
  "torch>=1.12.0",
  "torchvision>=0.13.0",
  "ffmpeg-python>=0.2.0",
  "yt-dlp>=2022.5.0",
  "dtaidistance>=2.3.0",
  "scikit-learn>=1.1.0",
  "pyyaml>=6.0",
  "tqdm>=4.64.0",
  "seaborn>=0.12.0",
  "plotly>=5.9.0"
]

[project.optional-dependencies]
dev = [
  "pytest>=7.0.0",
  "flake8>=5.0.0",
  "black>=22.6.0",
  "isort>=5.10.0",
  "mypy>=0.971",
  "pre-commit>=2.20.0",
  "sphinx>=5.0.0",
  "sphinx-rtd-theme>=1.0.0"
]

[project.urls]
Homepage = "https://github.com/noahcladera/tennis-stroke-detection"
Repository = "https://github.com/noahcladera/tennis-stroke-detection"
Documentation = "https://tennis-stroke-detection.readthedocs.io/"
"Bug Tracker" = "https://github.com/noahcladera/tennis-stroke-detection/issues"

[project.scripts]
tennis-stroke-detect = "src.inference.predictor:main"
tennis-stroke-train = "src.training.trainer:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
exclude = ["tests*"]

[tool.black]
line-length = 88
target-version = ["py38"]
include = '\.pyi?$'

[tool.isort]
profile = "black"
line_length = 88
multi_line_output = 3

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
pythonpath = ["."]