[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tennis-stroke-detection"
version = "0.1.0"
description = "A pipeline for processing tennis videos, extracting pose data, and creating segmented stroke clips."
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }
authors = [
  { name = "Noah Cladera", email = "noahcladera@gmail.com" }
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "Intended Audience :: Science/Research",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "License :: OSI Approved :: MIT License",
  "Topic :: Scientific/Engineering :: Image Processing",
  "Topic :: Multimedia :: Video",
  "Operating System :: OS Independent"
]
dependencies = [
  "numpy>=1.22.0",
  "scipy>=1.8.0",
  "pandas>=1.4.0",
  "mediapipe>=0.9.0",
  "opencv-python>=4.6.0",
  "ffmpeg-python>=0.2.0",
  "yt-dlp>=2022.5.0",
  "pyyaml>=6.0",
  "tqdm>=4.64.0"
]

[project.optional-dependencies]
dev = [
  "pytest>=7.0.0",
  "black>=22.6.0",
  "isort>=5.10.0"
]

[project.urls]
Homepage = "https://github.com/noahcladera/tennis-stroke-detection"
Repository = "https://github.com/noahcladera/tennis-stroke-detection"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
exclude = ["tests*"]

[tool.black]
line-length = 88
target-version = ["py38"]
include = '\.pyi?$'

[tool.isort]
profile = "black"
line_length = 88
multi_line_output = 3

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
pythonpath = ["."]